--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -388,6 +388,61 @@ but not for the triple \ms{TimBernersLee hasSSN "123-45-6789"\textasciicircum{}\
 
 \subsection{Not Expressible by OWL 2 QL but by OWL 2 DL}
 
+\textbf{Allowed Values}\footnote{corresponds to R-30-ALLOWED-VALUES-FOR-RDF-OBJECTS and R-37-ALLOWED-VALUES-FOR-RDF-LITERALS}\textbf{.}
+It is a common requirement to narrow down the value space of a property by an exhaustive enumeration of the valid values (both literals or resources). This is often rendered in drop down boxes or radio buttons in user interfaces. 
+The constraint 'Jedis can only have blue, green, or white laser swords' can be expressed by OWL 2 DL, DSP, ReSh, ShEx, SPIN, and SPARQL.
+
+\begin{DL}
+Jedi $\equiv$ $\exists$ laserSwordColor . \{blue, green, white\} \\
+\end{DL}
+
+In DSP, the constraint does not look that concise:
+
+\begin{ex}
+personDescriptionTemplate
+    a dsp:DescriptionTemplate ;
+    dsp:resourceClass Jedi ;
+    dsp:statementTemplate [
+        a dsp:LiteralStatementTemplate ;
+        dsp:property laserSwordColor ;
+        dsp:literalConstraint [
+            a dsp:LiteralConstraint ;
+            dsp:literal "blue" ;
+            dsp:literal "green" ;
+            dsp:literal "white"] ] .
+\end{ex}
+
+When representing the constraint by OWL2 DL a new datatype is defined by simply enumerating its literals:
+
+\begin{ex}
+laserSwordColor rdfs:range laserSwordColors . 
+laserSwordColors
+    a rdfs:Datatype .
+    owl:oneOf ( "blue" "green" "white" ) .
+\end{ex}
+
+ReSh can also be used for this purpose:
+
+\begin{ex}
+Jedi a rs:ResourceShape ;
+    rs:property [
+        rs:name "laserSwordColor" ;
+        rs:propertyDefinition laserSwordColor ;
+        rs:allowedValue "blue" , "green" , "white" ;
+        rs:occurs rs:Exactly-one ;
+    ] .
+\end{ex}
+
+ShEx is the most intuitive and concise means representing the allowed values constraint:
+
+\begin{ex}
+Jedi {
+    laserSwordColor ('blue' 'green' 'white') }
+\end{ex}
+
+Data containing the triples \ms{Yoda a Jedi ; laserSwordColor 'blue'} is valid.
+Data including the triples \ms{DarthMaul a Jedi ; laserSwordColor 'red'} is invalid.
+
 \subsection{Not Intuitively Expressible by OWL 2 DL}
 
 \textbf{Context-Specific Exclusive OR of Properties.}
