--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -209,12 +209,10 @@ Reasoning is the process of determining what follows from what has been
 stated.  Reasoning ranges from simple (students are people, John is a
 student, therefore John is a person) to the very complex. Reasoning can
 also recognize impossibilities (students are people, John is a student, John
-is not a person, therefore there is a contradiction).  In the presence of
-complete information, nothing new can be inferred, so reasoning only checks
-for impossibilities, i.e., constraint violations. \an{what do you mean with this sentence?}
+is not a person, therefore there is a contradiction). 
 
 \begin{itemize}
-	\item inferencing as a pre/post validation step \an{why post?}
+	\item inferencing as a pre validation step
 	\item both should be possible: (1) constraint validation with reasoning and (2) constraint validation without reasoning \an{we should mention a reason why we need this...}
 \end{itemize}
 
@@ -224,21 +222,15 @@ nothing, however, to prevent an application from running reasoning prior
 to validation to add inferred triples to the data being validated. But
 the general feeling right now is that validation acts on instance data
 without requiring that the validator apply reasoning in order to do so.
-\an{I would explain the addressed problem by an example, like the following:\\
-consider the KB $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Perso, Person(\textbf{Thomas})\}$, using the OWA we know that \textbf{Thomas} has some Ancestor, but we do not know them, so $\mathcal{K}$ is consistent. In CWA the constraint needs to be satisfied only by named individuals, so there are some validation errors.\\
-A more complex example could be: Assume $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Perso, (\textsf{funct } hasAncestor), Person(\textbf{Thomas}), hasAncestor(\textbf{Thomas}, \textbf{Erman}), hasAncestor(\textbf{Thomas}, \textbf{Andy})\}$, in CWA there is a clash because of the functional role \textit{hasAncestor} and the UNA, but in OWA there is no UNA by default so the reasoner will produce that $\textbf{Erman} \equiv \textbf{Andy}$. But this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family.
-Another point would be that if we perform RDF validation with no reasoning, we will get a further clash \textbf{Erman} is not defined to be a \textit{Person}, but if we do the validation after some reasoning, there will be no clash, because by definition the following definition will be inferred: $Person(\textbf{Erman})$. So in my understanding it would be more useful/reasonable to perform the validation task after reasoning.}
 
-Then I wonder what would be the situation if we recommend that reasoning should happen prior to validation. Reasoning will 'fix' the data in some case (R-25 and R-28) but it would make the data more 'redundant' in others (R-224). \an{I can't follow...}
-
-Nehmen wir nun an, dass dein Framework welches entsprechende SPARQL Queries generiert diese auf einem SPARQL Endpoint evaluiert der zu der vorliegenden Ontologie bzw. des darin verwendeten OWL 2 Profils das entsprechende Entailment Regime realisiert, wären die zurückgegebenen Resultsets vollständig. Wie das Entailment Regime im Endpoint realisiert ist, also durch Query Rewriting oder durch Vervollständigung der ABox, ist dabei irrelevant.
-
-Wie allerdings bspw. in 
-\url{https://www.uni-ulm.de/fileadmin/website_uni_ulm/iui.inst.090/Lehre/WS_2011-2012/SemWebGrundlagen/LectureNotes.pdf}
-auf Seite 51 veranschaulicht, ist die Komplexität des Reasoning abhängig von der zugrunde gelegten Sprache und kann daher nur in bestimmten Fällen effizient durchgeführt werden. Wie in unserem letzten Paper beschrieben zielt unter anderem die Definition von DL-Lite gerade darauf ab Reasoning Aufgaben und Query Answering effizient zu ermöglichen und ist Grundlage des OWL 2 QL Profils. Nun ist allgemein bekannt, dass die logische Konsistenz für diese Art von Sprachen effizient geprüft werden kann. 
-
-Allerding wäre wie bspw. in 
-\url{http://www.aifb.kit.edu/images/d/d2/2005_925_Haase_Consistent_Evol_1.pdf} beschrieben auch eine sogenannte 'User-defined Consistency' denkbar. Genau an dieser Stelle könnten wir ansetzen.
+%Nehmen wir nun an, dass dein Framework welches entsprechende SPARQL Queries generiert diese auf einem SPARQL Endpoint evaluiert der zu der vorliegenden Ontologie bzw. des darin verwendeten OWL 2 Profils das entsprechende Entailment Regime realisiert, wären die zurückgegebenen Resultsets vollständig. Wie das Entailment Regime im Endpoint realisiert ist, also durch Query Rewriting oder durch Vervollständigung der ABox, ist dabei irrelevant.
+%
+%Wie allerdings bspw. in 
+%\url{https://www.uni-ulm.de/fileadmin/website_uni_ulm/iui.inst.090/Lehre/WS_2011-2012/SemWebGrundlagen/LectureNotes.pdf}
+%auf Seite 51 veranschaulicht, ist die Komplexität des Reasoning abhängig von der zugrunde gelegten Sprache und kann daher nur in bestimmten Fällen effizient durchgeführt werden. Wie in unserem letzten Paper beschrieben zielt unter anderem die Definition von DL-Lite gerade darauf ab Reasoning Aufgaben und Query Answering effizient zu ermöglichen und ist Grundlage des OWL 2 QL Profils. Nun ist allgemein bekannt, dass die logische Konsistenz für diese Art von Sprachen effizient geprüft werden kann. 
+%
+%Allerding wäre wie bspw. in 
+%\url{http://www.aifb.kit.edu/images/d/d2/2005_925_Haase_Consistent_Evol_1.pdf} beschrieben auch eine sogenannte 'User-defined Consistency' denkbar. Genau an dieser Stelle könnten wir ansetzen.
 
 We answer the following \textbf{research questions}:
 \begin{enumerate}
@@ -277,12 +269,17 @@ We answer the following \textbf{research questions}:
 
 \section{RDF Validation Requirements and Reasoning}
 
+I would explain the addressed problem by an example, like the following:\\
+consider the KB $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Person, Person(\textbf{Thomas})\}$, using the OWA we know that \textbf{Thomas} has some Ancestor, but we do not know them, so $\mathcal{K}$ is consistent. In CWA the constraint needs to be satisfied only by named individuals, so there are some validation errors.\\
+A more complex example could be: \\
+Assume $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Person, (\textsf{funct } hasAncestor), Person(\textbf{Thomas}), hasAncestor(\textbf{Thomas}, \textbf{Erman}), hasAncestor(\textbf{Thomas}, \textbf{Andy})\}$, in CWA there is a clash because of the functional role \textit{hasAncestor} and the UNA, but in OWA there is no UNA by default so the reasoner will produce that $\textbf{Erman} \equiv \textbf{Andy}$. But this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family.
+Another point would be that if we perform RDF validation with no reasoning, we will get a further clash \textbf{Erman} is not defined to be a \textit{Person}, but if we do the validation after some reasoning, there will be no clash, because by definition the following definition will be inferred: $Person(\textbf{Erman})$. So in my understanding it would be more useful/reasonable to perform the validation task after reasoning.
+
 \tb{ToDO Thomas: RDF Validation Requirements and Inferencing}
 
 \subsection{OWL 2 QL Reasoning}
 
-%\tb{ToDo for Andy and Erman: I did just copy and paste for the next 3 paragraphs. Can you please formulate these paragraphs?}
-\er{Now it is completely rewritten. Feel free to touch and change anything.}
+\tb{ToDo for Andy and Erman: may you shorten the next 3 paragraphs? What is needed for the paper?}
 
  OWL 2 profiles (or fragments in logic literature) are restricted (sublanguage) versions of OWL 2 that offers different trade-offs regarding expressivity  vs. efficiency in reasoning. There are three main  profiles of OWL 2, which are OWL 2 QL, OWL 2 RL and OWL 2 EL namely, each designed to  be useful for different purposes and application scenarios. The choice of which profile to use is purpose-specific on what to express and to perform the reasoning about. We refer reader to \cite{owl2profiles2008} for a comprehensive treatment of those profiles. 
 
@@ -667,7 +664,6 @@ According to our evaluation of requirements to formulate RDF constraints, we ide
 \end{enumerate}
 
 The next table gives an overview of the computational complexity for RDF validation when it is performed -with and without reasoning. 
-\er{As side comment: for clarity paper better adopt either the word "inference" or "reasoning".}\\
 
 \begin{complexity}
 validation by query answering without reasoning & \textsc{Pspace}-Complete \\
