--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -423,7 +423,8 @@ personDescriptionTemplate
             dsp:literal "blue" ;
             dsp:literal "green" ;
             dsp:literal "white"] ] .
-\end{ex} \an{One constraint language is IMHO enought... Maybe not!?}
+\end{ex}
+\an{One constraint language is IMHO enought... Maybe not!?}
 
 When representing the constraint by OWL2 DL a new datatype is defined by simply enumerating its literals:
 
@@ -488,7 +489,8 @@ This can rather be seen as a workaround, as anonymous classes are built for each
     a owl:Restriction ;
     owl:onProperty :attackingByForce ;
     owl:allValuesFrom xsd:boolean ] .
-\end{ex} \an{Formulars in DL would be nice... ;)}
+\end{ex}
+\an{Formulars in DL would be nice... ;)}
 
 Considering the following data, Luke as well as Darth Sidious are associated with the class \ms{:Jedi}.
 As Darth Sidious has both relationships, a constraint Violation is raised.
