adding a further comment

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -200,7 +200,7 @@ the OWL 2 SPIN mapping is maintained at \url{https://github.com/boschthomas/OWL2
 Constraint validation does not appear to be part of the services provided by
 OWL.  This has lead to claims that OWL cannot be used for constraint
 validation.  However reasoning, which is the core service provided by OWL,
-and constraint validation are indeed very closely related.
+and constraint validation are indeed very closely related. \an{maybe we can use also the term 'User-defined Consistency' described in \url{http://www.aifb.kit.edu/images/d/d2/2005_925_Haase_Consistent_Evol_1.pdf} as a further 'hook' to establish our approach?}
 
 \an{a more formal example would be nice! ;)}
 Reasoning is the process of determining what follows from what has been
