--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -563,6 +563,8 @@ Bosch et al. explained each requirement and associated constraint in detail and 
 In order to logically underpin each requirement, we added mappings to DL.  
 
 \tb{How should we publish this? ordering of author not determined so far}
+
+\an{coloring still to be checked!}
  
 \textbf{Constraints Expressible by OWL 2 QL.}
 
